# DjangoPlay

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  manage.py  notebook.ipynb  pyproject.toml  requirements.txt  start.sh
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml  docker-compose.yml  startup.bash
django_play/: asgi.py  exceptions.py  managers.py  notebook.ipynb  settings.py  typing.py  urls.py  wsgi.py
django_play/accounts/: apps.py  exceptions.py  serializers.py  services.py  views.py
django_play/accounts/serializers/: user.py
django_play/blogs/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
django_play/blogs/migrations/: 0001_initial.py
django_play/blogs_core/: admin.py  apps.py  serializers.py  views.py
docker/: Dockerfile  docker-compose.app.yml  docker-compose.services.yml
scripts/: setup-dev-env.zsh  start.sh
