[project]
name = "djangoplay"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kamaal Farah", email = "kamaal.f1@gmail.com" }]
dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.2",
    "djangorestframework-simplejwt[crypto]>=5.3.1",
    "django-extensions>=3.2.3",
    "polars>=1.9.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "narwhals>=1.9.3",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=4.0.1", "ruff>=0.6.9", "werkzeug>=3.0.4"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["django_play"]
